[gd_scene load_steps=24 format=3 uid="uid://efmugjirbhf6"]

[ext_resource type="Script" path="res://levels/dream_0.gd" id="1_2h0rn"]
[ext_resource type="PackedScene" uid="uid://benshrhyqaw07" path="res://player/player.tscn" id="1_qhma6"]
[ext_resource type="Material" uid="uid://cqlktr7j3dv74" path="res://Textures/Prototype.tres" id="2_r73kg"]
[ext_resource type="PackedScene" uid="uid://towybnlkqqby" path="res://scripted_objects/moveable.tscn" id="4_0bu7u"]

[sub_resource type="Environment" id="Environment_35rfm"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.359069, 0.359069, 0.359069, 1)
ambient_light_energy = 0.01

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_2cxaw"]

[sub_resource type="PlaneMesh" id="PlaneMesh_cn4d8"]
size = Vector2(80, 19)

[sub_resource type="BoxShape3D" id="BoxShape3D_uf2m6"]
size = Vector3(1, 20, 20)

[sub_resource type="BoxMesh" id="BoxMesh_oq1k0"]
size = Vector3(1, 20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_i2q2h"]
size = Vector3(80, 20, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ij27h"]
size = Vector3(1, 20, 80)

[sub_resource type="BoxShape3D" id="BoxShape3D_tu7vt"]
size = Vector3(80, 20, 1)

[sub_resource type="BoxMesh" id="BoxMesh_6hdws"]
resource_local_to_scene = true
size = Vector3(1, 20, 80)

[sub_resource type="BoxShape3D" id="BoxShape3D_scyne"]
size = Vector3(1, 20, 20)

[sub_resource type="BoxMesh" id="BoxMesh_pqyoo"]
size = Vector3(1, 20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_tq6py"]
size = Vector3(19, 1, 19)

[sub_resource type="BoxMesh" id="BoxMesh_g346d"]
size = Vector3(20, 1, 20)

[sub_resource type="CylinderMesh" id="CylinderMesh_jb6pk"]
height = 1.2

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_saecr"]
points = PackedVector3Array(0.481498, 0.58685, 0.133107, -0.488584, -0.584706, -0.104763, -0.451208, -0.583719, -0.214015, 0.481498, -0.58685, 0.133107, -0.195527, 0.582668, 0.45991, -0.104855, 0.584679, -0.488561, 0.278553, -0.584248, -0.415142, -0.0135378, -0.586163, 0.499337, -0.488584, 0.584706, -0.104763, 0.422052, 0.580612, -0.26723, -0.43624, -0.588059, 0.243621, 0.29457, 0.5798, 0.403272, -0.104855, -0.584679, -0.488561, -0.469901, 0.584298, 0.169031, 0.479456, -0.584336, -0.141276, 0.29457, -0.5798, 0.403272, 0.169117, 0.58426, -0.46987, -0.304703, 0.58273, -0.395762, 0.133107, 0.58685, 0.481498, -0.3391, -0.579219, 0.366706, -0.304703, -0.58273, -0.395762, 0.0964934, -0.587036, -0.490549, 0.499337, 0.586163, -0.0135378, -0.37485, 0.578586, 0.330089, 0.403272, 0.5798, 0.29457, -0.490563, -0.587052, 0.096399, -0.379652, 0.585904, -0.324777, -0.195527, -0.582668, 0.45991, 0.445885, -0.588221, 0.225323, 0.188114, -0.58668, 0.463045, 0.422052, -0.580612, -0.26723, 0.330143, 0.578512, -0.374802)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lv0rw"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_68f4p"]
material = SubResource("StandardMaterial3D_lv0rw")

[sub_resource type="SphereShape3D" id="SphereShape3D_0v7k4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vmeqn"]
size = Vector3(1.97847, 4.5127, 19.5428)

[node name="Dream0" type="Node3D"]
script = ExtResource("1_2h0rn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_35rfm")

[node name="Player" parent="." instance=ExtResource("1_qhma6")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Walls" type="Node" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Walls"]

[node name="Floor" type="CollisionShape3D" parent="Walls/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_2cxaw")

[node name="FloorMesh" type="MeshInstance3D" parent="Walls/StaticBody3D/Floor"]
material_override = ExtResource("2_r73kg")
mesh = SubResource("PlaneMesh_cn4d8")
skeleton = NodePath("../../../..")

[node name="negxWall" type="CollisionShape3D" parent="Walls/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 10, 0)
shape = SubResource("BoxShape3D_uf2m6")

[node name="-xWallMesh" type="MeshInstance3D" parent="Walls/StaticBody3D/negxWall"]
mesh = SubResource("BoxMesh_oq1k0")
skeleton = NodePath("../..")

[node name="-zWall" type="CollisionShape3D" parent="Walls/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, -10)
shape = SubResource("BoxShape3D_i2q2h")

[node name="-zWallMesh" type="MeshInstance3D" parent="Walls/StaticBody3D/-zWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_ij27h")
skeleton = NodePath("../..")

[node name="zWall" type="CollisionShape3D" parent="Walls/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 10)
shape = SubResource("BoxShape3D_tu7vt")

[node name="zWallMesh" type="MeshInstance3D" parent="Walls/StaticBody3D/zWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_6hdws")
skeleton = NodePath("../..")

[node name="xWall" type="CollisionShape3D" parent="Walls/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 10, 0)
shape = SubResource("BoxShape3D_scyne")

[node name="xWallMesh" type="MeshInstance3D" parent="Walls/StaticBody3D/xWall"]
mesh = SubResource("BoxMesh_pqyoo")
skeleton = NodePath("../..")

[node name="Ceiling" type="CollisionShape3D" parent="Walls/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0147095, 20, 0.081543)
shape = SubResource("BoxShape3D_tq6py")

[node name="CeilingMesh" type="MeshInstance3D" parent="Walls/StaticBody3D/Ceiling"]
material_override = ExtResource("2_r73kg")
mesh = SubResource("BoxMesh_g346d")
skeleton = NodePath("../../../..")

[node name="StartRoomSpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12, 0)
light_energy = 5.571
light_specular = 2.938
spot_range = 20.7335
spot_angle = 31.3935

[node name="NextRoomSpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -26.516, 12, 0)
light_energy = 5.571
light_specular = 2.938
spot_range = 20.7335
spot_angle = 31.3935

[node name="Pedestal" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0.588221, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pedestal"]
mesh = SubResource("CylinderMesh_jb6pk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pedestal"]
shape = SubResource("ConvexPolygonShape3D_saecr")

[node name="Moveable" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_0bu7u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 2, 0)
freeze = true
player = NodePath("../Player")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Moveable"]
mesh = SubResource("SphereMesh_68f4p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Moveable"]
shape = SubResource("SphereShape3D_0v7k4")

[node name="OmniLight3D" type="OmniLight3D" parent="Moveable"]
light_energy = 5.267
light_specular = 1.567

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.869, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.632563, 2.15434, -1.03188)
shape = SubResource("BoxShape3D_vmeqn")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
